--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=postgres-rds
 server.servlet.context-path=/postgres-rds
-#spring.application.name=postgres-rds
-#spring.datasource.url=jdbc:postgresql://database-1.cluster-cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/<database-name>
-#spring.datasource.username=<database-username>
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#
-## AWS Region of your Aurora DB
-#aws.region=us-east-1
-#
-### Hibernate Properties
-## The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-#
-## Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb
+spring.datasource.username=iam_user
+spring.datasource.password= # Leave this blank for IAM authentication
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# AWS Region of your Aurora DB
+aws.region=us-east-1
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
