--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
   pre_build:
     commands:
       - echo "Installing Maven..."
-      - mvn clean install
+      - mvn clean install -DskipTests=true
       - echo "Logging in to Amazon ECR..."
       - aws --version
       - REPOSITORY_URI=254375462909.dkr.ecr.us-east-1.amazonaws.com/postgres-rds
