--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=postgres-rds
 server.servlet.context-path=/postgres-rds
-spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb
+#spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb
+spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb?sslmode=verify-full&sslrootcert=/path/to/rds-combined-ca-bundle.pem
+
 spring.datasource.username=iam_user
 spring.datasource.password= # Leave this blank for IAM authentication
 spring.datasource.driver-class-name=org.postgresql.Driver
