change back  jdk image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=postgres-rds
 server.servlet.context-path=/postgres-rds
-#spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb
-spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb?sslmode=verify-full&sslrootcert=/path/to/rds-combined-ca-bundle.pem
+spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb
+#spring.datasource.url=jdbc:postgresql://database-1.cnffqhpxhtmx.us-east-1.rds.amazonaws.com:5432/booksdb?sslmode=verify-full&sslrootcert=/path/to/rds-combined-ca-bundle.pem
 
 spring.datasource.username=iam_user
 spring.datasource.password= # Leave this blank for IAM authentication
